--- a/envs/rbt.yaml
+++ b/envs/rbt.yaml
@@ -1,6 +1,7 @@
 channels:
-  - bioconda
   - conda-forge
+  - bioconda
 dependencies:
   - rust-bio-tools =0.2.7
+  - openssl =1.0
   - bcftools =1.8
